[package]
name = "mavlink_logger"
version = "0.1.0"
edition = "2024"
authors = [
    "Wesley Murray",
]
description = "Implements a simple mavlink logger."
repository = "https://github.com/flocked-agriculture/mavlink_utils"
readme ="./README.md"
license = "MIT/Apache-2.0"

[dependencies]
uuid = { version = "1.15.1", features = ["v4"], optional = true }
rotating_file_handler = { path = "../rotating_file_handler", default-features = false }
mavlink = { version = "0.13.1", default-features = false }

[features]
# TODO: there is more configurability available for mavlink but we only include scope that has been tested
Experimental = [] # place holder for any feature development that is experimental. effectively a feature flag.
MavLog = ["mavlink/default", "uuid/v4"]
Tlog = ["mavlink/default"]
all = ["MavLog", "Tlog"]
default = ["MavLog"]

[dev-dependencies]
tempfile = "3.19.1"
